# easy-way

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app.rc  documentation.md  input.txt  main.cpp  queries.txt  vcpkg.json
docs/: osm_graph.docx  osm_preprocessor.docx
include/: csv_reader.hpp  geocode.hpp  graph_loader.hpp  mainwindow.hpp  osm_graph.hpp  preprocess.hpp  route.hpp  search.h  tsp.hpp  visualizer.hpp  vrp_solver.hpp
src/: csv_reader.cpp  geocode.cpp  graph_loader.cpp  mainwindow.cpp  osm_graph.cpp  preprocess.cpp  search.cpp  tsp.cpp  visualizer.cpp  vrp_solver.cpp
